# backend

./: .gitignore  README.md  TEST_RESULTS.md  app.py  db.py  flash_known.py  generate_codes.py  install.sh  keygen.py  requirements.txt  sticker.py  test_api_logic.py  test_backend.py  test_crypto_pipeline.py
known-cli/: pyproject.toml
known-cli/known_cli/: cli.py
